--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,2 +1,6 @@
-endpoint: process.env.PRISMA_ENDPOINT
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.prisma
+# secret: ${env:PRISMA_SECRET}
+hooks:
+    post-deploy:
+        - graphql get-schema -p prisma
